stderr
ChristmasSongTest.java:177: error: cannot find symbol
            poem.append(new StringBuilder(createVerseHeader(number)));
                                                            ^
  symbol:   variable number
  location: class ChristmasSongTest
1 error
